--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@auth0/auth0-vue": "^1.0.2",
     "@okta/okta-vue": "^5.5.0",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
